<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.UserDetailsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/room_db_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/welcome_content"
            app:layout_constraintBottom_toTopOf="@+id/details_cv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/details_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_white"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"
            android:layout_margin="25dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:id="@+id/name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/name_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_curve"
                    android:backgroundTint="@color/white"
                    android:hint="@string/enter_name"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/email_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_curve"
                    android:hint="@string/enter_email"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="20dp"
                    android:padding="10dp"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/mobile_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/mobile"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/mobile_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_curve"
                    android:hint="@string/enter_mobile"
                    android:textSize="15sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="25dp"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:maxLength="10"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/gender_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/gender_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_curve"
                    android:hint="@string/enter_gender"
                    android:textSize="15sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="25dp"
                    android:inputType="text"
                    android:padding="10dp"
                    android:maxLines="1"/>

            </LinearLayout>



        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/add_txt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/details_cv"
            app:layout_constraintStart_toStartOf="@+id/details_cv"
            android:background="@drawable/background_curve"
            android:backgroundTint="@color/sky_blue"
            android:text="@string/add_data"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_margin="25dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/view_txt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/details_cv"
            app:layout_constraintStart_toEndOf="@+id/add_txt"
            android:background="@drawable/background_curve"
            android:backgroundTint="@color/sky_blue"
            android:text="@string/view_data"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_margin="25dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/room_db_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:background="@drawable/background_curve"
            android:backgroundTint="@color/sky_blue"
            android:textColor="@color/white"
            android:text="@string/room_database"
            app:layout_constraintTop_toBottomOf="@+id/view_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>